--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                 </a>
             </div>
         </main>
+        
+        <!-- Footer -->
+        <footer class="text-center py-6 text-gray-500 text-sm">
+            <p class="mb-1">Some resources are not owned or affiliated with this website.</p>
+            <p class="text-xs">Built with ❤️ by hek3i</p>
+        </footer>
     </div>
 </body>
 </html>
